2008-04-07  Thomas Heller  <theller@python.net>

	* Fix the codegenerator to handle all kinds of IEnumXXX::Next
	method signatures; the second and third parameters may be [out] or
	[in, out].

2008-03-07  Thomas Heller  <theller@python.net>

	* Implemented support for SAFEARRAYs containing com interface
	pointers.

2008-03-04  Thomas Heller  <theller@python.net>

	* Add comtypes.client.gen_dir to comtypes.gen.__path__ so that the
	codegenerator can import its generated module(s).

2008-02-08  Thomas Heller  <theller@python.net>

	* Hacked support for 'open array' [out] parameters in COM methods.
	These are arrays that have both size_is() and length_is() in IDL.
	See the comments in comtypes\tools\codegenerator.py, search for
	'OPENARRAY'.

2008-02-06  Thomas Heller  <theller@python.net>

	* The badly named comtypes.client.wrap function was renamed into
	comtypes.client.GetBestInterface.  For backwards compatibility the
	old name stays as an alias.
	
	* Replaced the comtypes.messageloop.add_filter(filter) function
	with comtypes-messageloop.insert_filter(index, filter).  This
	allows to specify the order in which the filters are applied.

	* Added a workaround for the buggy _ctypes.COMError in Python 2.5
	and 2.51.

2007-12-19  Thomas Heller  <theller@python.net>

	* Bump version number to 0.4.2.

	* Special methods (__iter__ and so on) did not work on
	dispinterfaces, because the __map_case__ dictionary was not
	populated.

2007-11-23  Thomas Heller  <theller@python.net>

	* Released version comtypes 0.4.1.

	* Add a PumpEvents(timeout) function to comtypes.client.  This
	function calls the win32 CoWaitForMultipleHandles() function which
	will wait in a way compatible with all types of apartments;
	additionally this function can be interrupted with Control+C.

2007-11-21  Thomas Heller  <theller@python.net>

	* comtypes\__init__.py: Add docstrings to special methods.  Make
	named_property a data descriptor by providing a __set__ method